GET closet-entry confirmed working via manual testing. Swagger file updates so that POST closet-entry does not require bucket and obj key
